v 1.0.9.2

Fixed incorrect space structures production tooltips
Research Vessel starcharts production will now proc from Orbital Arrays
Fixed Void Order effect being reduced to 25% if player have alicorns

v 1.0.9.1

Changes by mtncat:

Numerous fixes in the calendar logic
____

Resetting with Chronospheres will disable IW
UU bonus to aliconrs was reduced from 0.1% to 0.05%
UU price ratio was increased from 1.15 to 1.18

Research Vessel will now cost more oil and less starchartgs
Research Vessel will now give a minor bonus to starchart production

Orbital Arrays

v 1.0.9.0
Changes by mtncat:

Fixed incorrect food advisor message logic
__
Unicorn Utopia
Dark Energy
Fixed zebra catpower bonus being incorrectly calculated with >1 zebras

Sky Palace and Unicorn Utopia will now boost the effect of ivory meteors
Certain log messages can be now filtered out

BLS from elders should now correctly stack with BLS pool
Fixed some cases with BLS getting outside of the maximum value

Every Marker will improve effect of Black Pyramide by 10%
Void Order will now have a 75% bonus from the Apocrypha

v 1.0.8.3

Dropbox integration for save import/export

v 1.0.8.2

Faith pool value will now have a correct suffix format
Hissmeowra will now give bonus to the uranium storage

Unobtainium huts price was reduced
Concrete huts price waqs slightly reduced

HM will now be capped by science. (But not much)
Science Vessel will now be capped by titanium.

Manual faith reset will now give a 1% bonus.
Mints will now give a very cosmetic bonus for a gold capacity.

v 1.0.8.1 (11 May)

Price upgrades were slightly nerfed (again)
Most of the hut price upgrades were slightly nerfed

Planet Cracker will now cost more science and alloy
Planet Cracker output was nerfed from 0.5 to 0.35

Everything is nerfed, Dave.

BLS value on UI will be now rounded

Advanced Exogeology

Eludium Huts
Eludium Reflectors
Eludium Cracker (TBD)

Fixed That Issue with the +all craft
Fixed the with faith reset
