@@ -15,20 +15,20 @@
 		<script src="lib/lz-string.js"></script>
 		<script src="lib/dropbox.js"></script>
 
-		<script src="core.js?v=1.0.9.1" 		type="text/javascript"></script>
-		<script src="resources.js?v=1.0.9.1" 	type="text/javascript"></script>
-		<script src="calendar.js?v=1.0.9.1" 	type="text/javascript"></script>
-		<script src="buildings.js?v=1.0.9.1" 	type="text/javascript"></script>
-		<script src="village.js?v=1.0.9.1" 		type="text/javascript"></script>
-		<script src="science.js?v=1.0.9.1" 		type="text/javascript"></script>
-		<script src="workshop.js?v=1.0.9.1" 	type="text/javascript"></script>
-		<script src="diplomacy.js?v=1.0.9.1" 	type="text/javascript"></script>
-		<script src="religion.js?v=1.0.9.1" 	type="text/javascript"></script>
-		<script src="achievements.js?v=1.0.9.1" type="text/javascript"></script>
-		<script src="space.js?v=1.0.9.1" 		type="text/javascript"></script>
-		<script src="prestige.js?v=1.0.9.1" 	type="text/javascript"></script>
+		<script src="core.js?v=1.0.9.2" 		type="text/javascript"></script>
+		<script src="resources.js?v=1.0.9.2" 	type="text/javascript"></script>
+		<script src="calendar.js?v=1.0.9.2" 	type="text/javascript"></script>
+		<script src="buildings.js?v=1.0.9.2" 	type="text/javascript"></script>
+		<script src="village.js?v=1.0.9.2" 		type="text/javascript"></script>
+		<script src="science.js?v=1.0.9.2" 		type="text/javascript"></script>
+		<script src="workshop.js?v=1.0.9.2" 	type="text/javascript"></script>
+		<script src="diplomacy.js?v=1.0.9.2" 	type="text/javascript"></script>
+		<script src="religion.js?v=1.0.9.2" 	type="text/javascript"></script>
+		<script src="achievements.js?v=1.0.9.2" type="text/javascript"></script>
+		<script src="space.js?v=1.0.9.2" 		type="text/javascript"></script>
+		<script src="prestige.js?v=1.0.9.2" 	type="text/javascript"></script>
 
-		<script src="game.js?v=1.0.9.1" 		type="text/javascript"></script>
+		<script src="game.js?v=1.0.9.2" 		type="text/javascript"></script>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -137,7 +137,7 @@
 					<a href="#" id="devBtn" onclick="dev();">#</a> |
 					<a href="#" onclick="wipe();">Wipe</a> |
 
-					<a href="#" onclick="$('#changelogDiv').toggle();">Ver 1.0.9.1</a>
+					<a href="#" onclick="$('#changelogDiv').toggle();">Ver 1.0.9.2</a>
 
 				</div>
 			</div>
@@ -157,7 +157,7 @@
 						Unicorn Utopia
 						Dark Energy
 
-					Rev: 1
+					Rev: 2
 						-
 
 
@@ -204,7 +204,7 @@
 					<div>
 						<span id="calendarDiv">Calendar :V</span>
 						<a id="dev_boostCalendar" href="#" onclick="dev_boostCalendar();" style="text-decoration: none; position: relative; left: 5px;"></a>
-						<a id="pauseBtn" style="font-size: 12px; float: right;" href="#" onclick="gamePage.togglePause();">pause</a>
+						<a id="pauseBtn" style="font-size: 12px; float: right;" href="#" onclick="gamePage.togglePause();">pawse</a>
 					</div>
 					<div style="padding-top: 10px; border-top: 1px solid gray;">
 						You are a kitten in a catnip forest.
